--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body{
 }
 
 main{
-    height: 100vh;
+    min-height: 100vh;
     gap: 50px;
 }
 
@@ -113,6 +113,33 @@ main{
 
 .btnOpacity:hover{
  opacity: 1;
+}
+
+.bouncyBallContainer{
+    height: 600px;
+    border-style: solid;
+    border-width: 2px;
+    border: black;
+}
+
+.bouncyBall{
+    height: 300px;
+    width: 300px;
+    border-radius: 100%;
+    background-color: red;
+    animation-name: bouncingBall;
+    animation-duration: 3s;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes bouncingBall {
+    0%{
+        transform: translateY(0);
+    }
+
+    100%{
+        transform: translateY(-300px);
+    }
 }
 
 
